<resources>
    <string name="app_name">DailyMenuPicker</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nastavenia</string>
    <string name="all_restaurants">Reštaurácie v okolí</string>
    <string name="today_all_foods">Dnešné jedlá v okolí</string>
    <string name="favorite_ingredients">Obľúbené ingrediencie</string>
    <string name="rice">Ryža</string>
    <string name="potato">Zemiaky</string>
    <string name="dumpling">Knedľa</string>
    <string name="vegetable">Zelenina</string>
    <string name="chicken">Kura</string>
    <string name="pork">Bravčovina</string>
    <string name="beef">Hovädzina</string>
    <string name="fish">Ryby</string>
    <string name="pasta">Cestoviny</string>
    <string name="sweet">Sladké</string>
    <string name="favorite_restaurants_header">Obľúbené reštaurácie</string>
    <string name="no_resource_message_favorite_restaurants">Nemáte žiadne obľúbené reštaurácie</string>
    <string name="no_resource_message_near_food">Nenašli sa žiadne jedlá v okolí</string>
    <string name="no_resource_message_near_restaurant">Nenašli sa žiadne reštaurácie v okolí</string>
    <string name="monday_name">Pondelok</string>
    <string name="tuesday_name">Utorok</string>
    <string name="wednesday_name">Streda</string>
    <string name="thursday_name">Štvrtok</string>
    <string name="friday_name">Piatok</string>
    <string name="no_food_for_restaurant_message">Pre túto reštauráciu sme nenašli žiadne jedlo</string>
    <string name="restaurant_list_average_price">Priemerná cena</string>
    <string name="restaurant_list_soup_price">Cena polievky</string>
    <string name="restaurant_list_rating">Hodnotenie</string>
    <string name="agenda_header">Týždňový plán</string>
    <string name="no_food_for_day">Jedlo pre tento deň sa nenašlo</string>
</resources>
