<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/all_restaurants" />
        <item
            android:id="@+id/nav_today_all_foods"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/today_all_foods" />

        <item
        android:id="@+id/nav_favorite_ingredients"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/favorite_ingredients" />

        <item
            android:id="@+id/nav_favorite_restaurants"
            android:icon="@drawable/ic_favorite_restaurants"
            android:title="@string/favorite_restaurants_header" />
    </group>
</menu>
